[no ci] update amplify meta

--- a/aws-amplify/index.html
+++ b/aws-amplify/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karate CLI - Install</title>
-    <meta name="description" content="Install Karate CLI - API testing made simple">
+    <title>Karate Unified Installer</title>
+    <meta name="description" content="Karate CLI - API testing made simple">
     <style>
         :root {
             --primary: #4f46e5;
@@ -185,21 +185,21 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="logo">Karate CLI</h1>
-        <p class="tagline">API testing made simple</p>
+        <h1 class="logo">Karate Unified Installer</h1>
+        <p class="tagline">Test automation made simple</p>
 
         <div class="install-section">
             <h2>macOS / Linux</h2>
             <div class="code-block">
-                <code>curl -fsSL https://karate.sh | sh</code>
-                <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh | sh', this)">Copy</button>
+                <code>curl -fsSL https://karate.sh/install.sh | sh</code>
+                <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh/install.sh | sh', this)">Copy</button>
             </div>
 
             <div class="divider"><span>or with auto-setup</span></div>
 
             <div class="code-block">
-                <code>curl -fsSL https://karate.sh | sh -s -- --yes</code>
-                <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh | sh -s -- --yes', this)">Copy</button>
+                <code>curl -fsSL https://karate.sh/install.sh | sh -s -- --yes</code>
+                <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh/install.sh | sh -s -- --yes', this)">Copy</button>
             </div>
         </div>
 
@@ -226,10 +226,10 @@
             </div>
         </div>
 
-        <div class="links">
-            <a href="https://github.com/karatelabs/karate">GitHub</a>
-            <a href="https://karatelabs.github.io/karate/">Documentation</a>
-            <a href="https://github.com/karatelabs/karate/issues">Issues</a>
+        <div class="links">            
+            <a href="https://docs.karatelabs.io">Documentation</a>
+            <a href="https://github.com/karatelabs/karate-cli">GitHub</a>
+            <a href="https://karatelabs.io">Karate Labs</a>
         </div>
     </div>
 
