improve the command line flag remove --yes with --components

--- a/aws-amplify/index.html
+++ b/aws-amplify/index.html
@@ -258,8 +258,8 @@
                 <div class="more-options-content">
                     <p class="option-label">With auto-setup (downloads JRE + JAR immediately):</p>
                     <div class="code-block">
-                        <code>curl -fsSL https://karate.sh/install.sh | sh -s -- --yes</code>
-                        <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh/install.sh | sh -s -- --yes', this)">Copy</button>
+                        <code>curl -fsSL https://karate.sh/install.sh | sh -s -- --all</code>
+                        <button class="copy-btn" onclick="copyToClipboard('curl -fsSL https://karate.sh/install.sh | sh -s -- --all', this)">Copy</button>
                     </div>
                 </div>
             </details>
@@ -276,8 +276,8 @@
                 <div class="more-options-content">
                     <p class="option-label">With auto-setup (downloads JRE + JAR immediately):</p>
                     <div class="code-block">
-                        <code>iex "& { $(irm https://karate.sh/install.ps1) } -Yes"</code>
-                        <button class="copy-btn" onclick="copyToClipboard('iex \"& { $(irm https://karate.sh/install.ps1) } -Yes\"', this)">Copy</button>
+                        <code>iex "& { $(irm https://karate.sh/install.ps1) } -All"</code>
+                        <button class="copy-btn" onclick="copyToClipboard('iex \"& { $(irm https://karate.sh/install.ps1) } -All\"', this)">Copy</button>
                     </div>
                 </div>
             </details>
